--- a/Shoppping list project/style.css
+++ b/Shoppping list project/style.css
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+.edit-mode {
+  color: #ccc;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
